# match

./: LICENSE  Makefile  README.md  example.txt  match.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
