name:                match
version:             0.1.0.0
synopsis:            Match patterns in text
description:         Please see README.md
homepage:            https://github.com/filib/match#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Cunningham
maintainer:          hello@filib.io
copyright:           2016 Philip Cunningham
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , pcre-heavy
                     , pcre-light
                     , string-conv
                     , text
  default-language:    Haskell2010

executable match
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , bytestring
                     , match
                     , string-conv
                     , text
  default-language:    Haskell2010

test-suite match-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , hspec
                     , match
                     , tasty
                     , tasty-hspec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/filib/match
